--- a/inspec.yml
+++ b/inspec.yml
@@ -1,10 +1,10 @@
 name: webserver
-title: file check
+title: Ensure the test.txt file exists
 maintainer: Akshay
 copyright: Akshay
 copyright_email: akshay@chef.com
 license: Apache-2.0
 summary: An InSpec Compliance Profile
-version: 1.1.0
+version: 1.1.1
 supports:
   platform: os
