--- a/inspec.yml
+++ b/inspec.yml
@@ -1,5 +1,5 @@
 name: webserver
-title: Ensure the test.txt file exists
+title: Verify that required files exist
 maintainer: Akshay
 copyright: Akshay
 copyright_email: akshay@chef.com
